# team-agent

./: .env  .env.example  .env.prod.template  .gitignore  CLAUDE.md  Caddyfile  HANDOFF-TICKET-94.md  NAVIGATION.md  README.md  architecture.md  deploy.sh  design-prototype.html  docker-compose.prod.yml  docker-compose.yml  html-slides.skill  statusline-autocompact.sh
services/ai/: Dockerfile  pyproject.toml
services/ai/admin-skills/feature-request/: SKILL.md
services/ai/admin-skills/raise-bug/: SKILL.md
services/ai/admin-skills/workload-recovery/: SKILL.md
services/ai/src/ai/: admin.py  agents.py  config.py  escalation.py  listener.py  main.py  memory_log_handler.py  runner.py  screencast.py  session.py  terminal.py  terminal_listener.py  tool_approval.py  workload.py
services/api/: Dockerfile  pyproject.toml  pyrightconfig.json
services/api/alembic/: env.py
services/api/alembic/versions/: 6f091083e756_initial_schema.py  9b5dc581fa67_add_auth_sessions_and_user_email.py  a1b2c3d4e5f6_add_activity_heartbeats.py  a7e4b3c91d02_add_permission_mode_to_workloads.py  b2c3d4e5f6a7_add_settings_and_timesheets.py  b8f2e4a17c03_add_admin_room_support.py  c3a7f1b2d456_add_default_branch_to_projects.py  c3d4e5f6a7b8_add_tool_approval_events.py  d4e5f6a7b8c9_add_dispatch_id_to_workloads.py  e5f6a7b8c9d0_add_avatar_to_project_members.py  f6a7b8c9d0e1_add_cost_tracking_columns.py
services/api/project-template/: .gitignore  CLAUDE.md  README.md  pyproject.toml
services/api/project-template/analysis/: README.md  run.py
services/api/project-template/data/: data_receipt_register.md
services/api/project-template/reporting/: README.md
services/api/project-template/validation/: README.md
services/api/tests/: test_blocks.py
(+254 files in other folders)
