[project]
name = "team-agent-ai"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "claude-agent-sdk>=0.1.36",
    "fastapi>=0.129.0",
    "google-genai>=1.64.0",
    "httpx>=0.28.1",
    "openai>=2.21.0",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "redis>=7.1.1",
    "uvicorn>=0.40.0",
]
