[project]
name = "team-agent-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.8",
    "duckdb>=1.4.4",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "redis>=7.1.1",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
